include/pocketsphinx.h


typedef struct ps_arg_s {
	char const *name;   
	int type;           
	char const *deflt;  
	char const *doc;    
} ps_arg_t;
typedef struct cmd_ln_s ps_config_t;
typedef struct ps_decoder_s ps_decoder_t;
typedef struct ps_astar_s ps_nbest_t;
typedef struct ps_seg_s ps_seg_t;
POCKETSPHINX_EXPORT
ps_decoder_t *ps_init(ps_config_t *config);
POCKETSPHINX_EXPORT
int ps_reinit(ps_decoder_t *ps, ps_config_t *config);
POCKETSPHINX_EXPORT
ps_arg_t const *ps_args(void);
POCKETSPHINX_EXPORT
ps_decoder_t *ps_retain(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
int ps_free(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
ps_config_t *ps_get_config(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
logmath_t *ps_get_logmath(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
int ps_load_dict(ps_decoder_t *ps, char const *dictfile,
                 char const *fdictfile, char const *format);
POCKETSPHINX_EXPORT
int ps_save_dict(ps_decoder_t *ps, char const *dictfile, char const *format);
POCKETSPHINX_EXPORT
int ps_add_word(ps_decoder_t *ps,
                char const *word,
                char const *phones,
                int update);
POCKETSPHINX_EXPORT
long ps_decode_raw(ps_decoder_t *ps, FILE *rawfh,
                   long maxsamps);
POCKETSPHINX_EXPORT
int ps_start_utt(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
int ps_process_raw(ps_decoder_t *ps,
                   int16 const *data,
                   size_t n_samples,
                   int no_search,
                   int full_utt);
POCKETSPHINX_EXPORT
int ps_end_utt(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
char const *ps_get_hyp(ps_decoder_t *ps, int32 *out_best_score);
POCKETSPHINX_EXPORT
ps_lattice_t *ps_get_lattice(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
ps_seg_t *ps_seg_iter(ps_decoder_t *ps);
POCKETSPHINX_EXPORT
ps_seg_t *ps_seg_next(ps_seg_t *seg);
POCKETSPHINX_EXPORT
char const *ps_seg_word(ps_seg_t *seg);
POCKETSPHINX_EXPORT
void ps_seg_frames(ps_seg_t *seg, int *out_sf, int *out_ef);
POCKETSPHINX_EXPORT
int32 ps_seg_prob(ps_seg_t *seg, int32 *out_ascr, int32 *out_lscr, int32 *out_lback);
POCKETSPHINX_EXPORT
void ps_seg_free(ps_seg_t *seg);
POCKETSPHINX_EXPORT
ps_nbest_t *ps_nbest(ps_decoder_t *ps);
POCKETSPHINX_EXPORT 
ps_nbest_t *ps_nbest_next(ps_nbest_t *nbest);
POCKETSPHINX_EXPORT
char const *ps_nbest_hyp(ps_nbest_t *nbest, int32 *out_score);
POCKETSPHINX_EXPORT
ps_seg_t *ps_nbest_seg(ps_nbest_t *nbest);
POCKETSPHINX_EXPORT
void ps_nbest_free(ps_nbest_t *nbest);
POCKETSPHINX_EXPORT
void ps_get_utt_time(ps_decoder_t *ps, double *out_nspeech,
                     double *out_ncpu, double *out_nwall);
POCKETSPHINX_EXPORT
void ps_get_all_time(ps_decoder_t *ps, double *out_nspeech,
                     double *out_ncpu, double *out_nwall);