python/bogus_pygobject.h

typedef struct {
    PyObject_HEAD
    void * boxed;
    unsigned long gtype;
    int free_on_dealloc;
} PyGBoxed;
typedef struct {
    PyObject_HEAD
    void *pointer;
    unsigned long gtype;
} PyGPointer;